fix:key location 수정